Created MovieController with Index action responsible for rendering Movie list view

--- a/Movies/Views/Shared/_Layout.cshtml
+++ b/Movies/Views/Shared/_Layout.cshtml
@@ -15,7 +15,8 @@
         <a type="button" class="text-white font-bold text-2xl" asp-page="/Index">
             <i class="fa-solid fa-film text-red-600"></i> MovieApp
         </a>
-        <a type="button" asp-page="/Movies/Create">Add Movie</a>
+        <input type="search" class="bg-gray-800 rounded-2xl px-4 py-2 text-white w-1/2" placeholder="Search..." />
+        <a type="button" class="bg-red-600 text-white font-bold px-4 py-2 rounded-2xl hover:bg-red-400 transition-all duration-200" asp-page="/Movies/Create">Add Movie</a>
     </nav>
 </header>
 <main>
