--- a/Movies/Views/Movies/Index.cshtml
+++ b/Movies/Views/Movies/Index.cshtml
@@ -1,27 +1,18 @@
 ﻿@model IEnumerable<Data.Models.Movie>
 
-<div class="flex items-center justify-center text-white w-full p-10">
-    <table class="w-full">
-        <thead>
-        <tr>
-            <th>@Html.DisplayNameFor(model => model.Title)</th>
-            <th>@Html.DisplayNameFor(model => model.ReleaseDate)</th>
-            <th>@Html.DisplayNameFor(model => model.Genre)</th>
-            <th>@Html.DisplayNameFor(model => model.Price)</th>
-            <th></th>
-        </tr>
-
-        </thead>
-        <tbody>
-        @foreach (var movie in Model)
-        {
-        <tr>
-            <td>@movie.Title</td>
-            <td>@movie.ReleaseDate</td>
-            <td>@movie.Genre</td>
-            <td>@movie.Price</td>
-        </tr>
-        }
-        </tbody>
-    </table>
+<div class="grid grid-cols-4 place-items-center gap-6 text-white p-10">
+   @foreach (var movie in Model)
+   {
+      <div class="relative w-[300px] h-[400px] items-center justify-center hover:scale-105 transition-all duration-200 group overflow-hidden">
+         <img src="@movie.ImageUrl" alt="@movie.Title cover image" class="object-center w-full h-full" />
+         <div class="absolute top-0 left-0 w-full h-full bg-black/50 z-1 p-4 flex flex-col items-center justify-center gap-6 translate-y-full group-hover:translate-y-0 transition-all duration-200">
+            <p class="text-2xl font-bold text-center">@movie.Title</p>
+            <div class="flex flex-col gap-2 items-center">
+               <a type="button" class="px-4 py-2 rounded-2xl font-bold border-2 border-white hover:bg-white hover:text-black cursor-pointer transition-all duration-200">Details</a>
+               <a type="button" class="px-4 py-2 rounded-2xl font-bold bg-white text-black hover:bg-black hover:text-white cursor-pointer transition-all duration-200">Edit</a>
+               <a type="button" class="px-4 py-2 rounded-2xl font-bold bg-red-600 hover:bg-red-400 cursor-pointer transition-all duration-200">Delete</a>
+            </div>
+         </div>
+      </div>
+   }
 </div>
