--- a/Movies/Views/Movies/Index.cshtml
+++ b/Movies/Views/Movies/Index.cshtml
@@ -8,7 +8,7 @@
          <div class="absolute top-0 left-0 w-full h-full bg-black/50 z-1 p-4 flex flex-col items-center justify-center gap-6 translate-y-full group-hover:translate-y-0 transition-all duration-200">
             <p class="text-2xl font-bold text-center">@movie.Title</p>
             <div class="flex flex-col gap-2 items-center">
-               <a type="button" class="px-4 py-2 rounded-2xl font-bold border-2 border-white hover:bg-white hover:text-black cursor-pointer transition-all duration-200">Details</a>
+               <a asp-action="Details" asp-route-id="@movie.Id" type="button" class="px-4 py-2 rounded-2xl font-bold border-2 border-white hover:bg-white hover:text-black cursor-pointer transition-all duration-200">Details</a>
                <a type="button" class="px-4 py-2 rounded-2xl font-bold bg-white text-black hover:bg-black hover:text-white cursor-pointer transition-all duration-200">Edit</a>
                <a type="button" class="px-4 py-2 rounded-2xl font-bold bg-red-600 hover:bg-red-400 cursor-pointer transition-all duration-200">Delete</a>
             </div>
