--- a/Movies/Views/Shared/_Layout.cshtml
+++ b/Movies/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
             <i class="fa-solid fa-film text-red-600"></i> MovieApp
         </a>
         <input type="search" class="bg-gray-800 rounded-2xl px-4 py-2 text-white w-1/2" placeholder="Search..." />
-        <a type="button" class="bg-red-600 text-white font-bold px-4 py-2 rounded-2xl hover:bg-red-400 transition-all duration-200" asp-page="/Movies/Create">Add Movie</a>
+        <a type="button" class="bg-red-600 text-white font-bold px-4 py-2 rounded-2xl hover:bg-red-400 transition-all duration-200" asp-action="Create">Add Movie</a>
     </nav>
 </header>
 <main>
