--- a/Movies/Views/Movies/Details.cshtml
+++ b/Movies/Views/Movies/Details.cshtml
@@ -13,7 +13,7 @@
             </div>
             <div class="flex flex-col gap-2">
                 <a asp-action="Edit" asp-route-id="@Model.Id" type="button" class="px-4 py-2 text-center rounded-2xl font-bold bg-white text-black hover:bg-black hover:text-white cursor-pointer transition-all duration-200">Edit</a>
-                <a type="button" class="px-4 py-2 text-center rounded-2xl font-bold bg-red-600 hover:bg-red-400 cursor-pointer transition-all duration-200">Delete</a>
+                <a asp-action="Delete" asp-route-id="@Model.Id" type="button" class="px-4 py-2 text-center rounded-2xl font-bold bg-red-600 hover:bg-red-400 cursor-pointer transition-all duration-200">Delete</a>
             </div>
         </div>
     </div>
