--- a/Movies/Views/Shared/_Layout.cshtml
+++ b/Movies/Views/Shared/_Layout.cshtml
@@ -15,7 +15,9 @@
         <a type="button" class="text-white font-bold text-2xl" asp-page="/Index">
             <i class="fa-solid fa-film text-red-600"></i> MovieApp
         </a>
-        <input type="search" class="bg-gray-800 rounded-2xl px-4 py-2 text-white w-1/2" placeholder="Search..." />
+        <form class="w-1/2" asp-controller="Movies" asp-action="Index" method="get">
+            <input type="search" name="SearchString" class="bg-gray-800 rounded-2xl px-4 py-2 text-white w-full" placeholder="Search..." />
+        </form>
         <a type="button" class="bg-red-600 text-white font-bold px-4 py-2 rounded-2xl hover:bg-red-400 transition-all duration-200" asp-action="Create">Add Movie</a>
     </nav>
 </header>
